feat: 임시 테스트용 엔티티 생성